@@ -1,3 +1,10 @@
+2006-11-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-02-07
+	* protect call to 'postFrame' with a try/catch block and keep
+	trying to post until it succeeds. Two new debug counters,
+	nbPostFrame_ and nbPostFrameFailed_ keep track of this.
+
 2006-11-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-02-06
